# llm-class

./: .env.example  .gitignore  README.md  all_files.txt  pyproject.toml  test_manual.py
src/: main.py
src/monitoring_dashboard/: __init__.py  monitoring_dashboard.py
tests/: test_embedding_model.py  test_intent_parser.py  test_metric_retriever.py  test_query_builder.py  test_translator_model copy.py
